# TSSPDCL-VOICE-AGENT

./: .gitignore  README.md  config.json  example.env  main.py  pyproject.toml  tssdcl_sql.py
